- refractor transaction activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.TransactionActivity"
+            android:name=".ui.transaction.TransactionActivity"
             android:parentActivityName=".ui.MainActivity">
 
         </activity>
